--- a/.envexample
+++ b/.envexample
@@ -64,7 +64,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
-APP_NAME=Go-Blogs
+APP_NAME=KabarUntirta
 APP_ENV=local
 APP_KEY=base64:HammE3TfJrbiG/5tVM3MDM4ONXsAezn4bd5W6JcqqPM=
 APP_DEBUG=true
